// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BackupTab error state snapshot - error 1`] = `
<section
  className="pf-c-page__main-section pf-m-light"
>
  <div
    className="pf-c-content header"
  >
    <small
      className=""
      data-ouia-component-id="OUIA-Generated-Text-5"
      data-ouia-component-type="PF4/Text"
      data-ouia-safe={true}
      data-pf-content={true}
    >
      Backup information for this workspace. Backups are created automatically by the DevWorkspace Operator based on the cluster configuration.
    </small>
  </div>
  <div
    aria-atomic="true"
    aria-live="polite"
  >
    <div
      aria-label="Danger Alert"
      className="pf-c-alert pf-m-inline pf-m-danger alert"
      data-ouia-component-id="OUIA-Generated-Alert-danger-2"
      data-ouia-component-type="PF4/Alert"
      data-ouia-safe={true}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="pf-c-alert__icon"
      >
        <svg
          aria-hidden={true}
          aria-labelledby={null}
          fill="currentColor"
          height="1em"
          role="img"
          style={
            {
              "verticalAlign": "-0.125em",
            }
          }
          viewBox="0 0 512 512"
          width="1em"
        >
          <path
            d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
          />
        </svg>
      </div>
      <h4
        className="pf-c-alert__title"
      >
        <span
          className="pf-u-screen-reader"
        >
          Danger alert:
        </span>
        Failed to load backup information
      </h4>
      <div
        className="pf-c-alert__description"
      >
        Network error occurred
      </div>
    </div>
  </div>
</section>
`;

exports[`BackupTab loading state snapshot - loading 1`] = `
<section
  className="pf-c-page__main-section pf-m-light"
>
  <div
    className="loading"
  >
    <span
      aria-label="Loading backup information"
      aria-valuetext="Loading..."
      className="pf-c-spinner pf-m-lg"
      role="progressbar"
    >
      <span
        className="pf-c-spinner__clipper"
      />
      <span
        className="pf-c-spinner__lead-ball"
      />
      <span
        className="pf-c-spinner__tail-ball"
      />
    </span>
  </div>
</section>
`;

exports[`BackupTab no backup info snapshot - no backup info 1`] = `
<section
  className="pf-c-page__main-section pf-m-light"
>
  <div
    className="pf-c-content header"
  >
    <small
      className=""
      data-ouia-component-id="OUIA-Generated-Text-8"
      data-ouia-component-type="PF4/Text"
      data-ouia-safe={true}
      data-pf-content={true}
    >
      Backup information for this workspace. Backups are created automatically by the DevWorkspace Operator based on the cluster configuration.
    </small>
  </div>
  <div
    aria-atomic="true"
    aria-live="polite"
  >
    <div
      aria-label="Info Alert"
      className="pf-c-alert pf-m-inline pf-m-info"
      data-ouia-component-id="OUIA-Generated-Alert-info-6"
      data-ouia-component-type="PF4/Alert"
      data-ouia-safe={true}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="pf-c-alert__icon"
      >
        <svg
          aria-hidden={true}
          aria-labelledby={null}
          fill="currentColor"
          height="1em"
          role="img"
          style={
            {
              "verticalAlign": "-0.125em",
            }
          }
          viewBox="0 0 512 512"
          width="1em"
        >
          <path
            d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
          />
        </svg>
      </div>
      <h4
        className="pf-c-alert__title"
      >
        <span
          className="pf-u-screen-reader"
        >
          Info alert:
        </span>
        No backup information available
      </h4>
      <div
        className="pf-c-alert__description"
      >
        Backup data for this workspace has not been recorded yet.
      </div>
    </div>
  </div>
</section>
`;

exports[`BackupTab with backup info - failed snapshot - failed status 1`] = `
<section
  className="pf-c-page__main-section pf-m-light"
>
  <div
    className="pf-c-content header"
  >
    <small
      className=""
      data-ouia-component-id="OUIA-Generated-Text-20"
      data-ouia-component-type="PF4/Text"
      data-ouia-safe={true}
      data-pf-content={true}
    >
      Backup information for this workspace. Backups are created automatically by the DevWorkspace Operator based on the cluster configuration.
    </small>
  </div>
  <div
    aria-atomic="true"
    aria-live="polite"
  >
    <article
      className="pf-c-card pf-m-flat"
      data-ouia-component-id="OUIA-Generated-Card-12"
      data-ouia-component-type="PF4/Card"
      data-ouia-safe={true}
      id=""
    >
      <div
        className="pf-c-card__body"
      >
        <dl
          className="pf-c-description-list pf-m-horizontal"
        >
          <div
            className="pf-c-description-list__group"
          >
            <dt
              className="pf-c-description-list__term"
            >
              <span
                className="pf-c-description-list__text"
              >
                Status
              </span>
            </dt>
            <dd
              className="pf-c-description-list__description"
            >
              <div
                className="pf-c-description-list__text"
              >
                <span
                  data-testid="backup-status-badge"
                >
                  failed
                </span>
              </div>
            </dd>
          </div>
          <div
            className="pf-c-description-list__group"
          >
            <dt
              className="pf-c-description-list__term"
            >
              <span
                className="pf-c-description-list__text"
              >
                Error
              </span>
            </dt>
            <dd
              className="pf-c-description-list__description"
            >
              <div
                className="pf-c-description-list__text"
              >
                <div
                  aria-label="Danger Alert"
                  className="pf-c-alert pf-m-inline pf-m-plain pf-m-danger"
                  data-ouia-component-id="OUIA-Generated-Alert-danger-4"
                  data-ouia-component-type="PF4/Alert"
                  data-ouia-safe={true}
                  data-testid="backup-error-message"
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                >
                  <div
                    className="pf-c-alert__icon"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style={
                        {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 512 512"
                      width="1em"
                    >
                      <path
                        d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                      />
                    </svg>
                  </div>
                  <h4
                    className="pf-c-alert__title"
                  >
                    <span
                      className="pf-u-screen-reader"
                    >
                      Danger alert:
                    </span>
                    Backup failed
                  </h4>
                  <div
                    className="pf-c-alert__description"
                  >
                    Registry authentication failed
                  </div>
                </div>
              </div>
            </dd>
          </div>
          <div
            className="pf-c-description-list__group"
          >
            <dt
              className="pf-c-description-list__term"
            >
              <span
                className="pf-c-description-list__text"
              >
                Last Backup
              </span>
            </dt>
            <dd
              className="pf-c-description-list__description"
            >
              <div
                className="pf-c-description-list__text"
              >
                2 hours ago (Jan 15, 2:30 p.m.)
              </div>
            </dd>
          </div>
          <div
            className="pf-c-description-list__group"
          >
            <dt
              className="pf-c-description-list__term"
            >
              <span
                className="pf-c-description-list__text"
              >
                Next Scheduled Backup
              </span>
            </dt>
            <dd
              className="pf-c-description-list__description"
            >
              <div
                className="pf-c-description-list__text"
              >
                Not scheduled
              </div>
            </dd>
          </div>
        </dl>
      </div>
    </article>
  </div>
</section>
`;

exports[`BackupTab with backup info - in progress snapshot - in-progress status 1`] = `
<section
  className="pf-c-page__main-section pf-m-light"
>
  <div
    className="pf-c-content header"
  >
    <small
      className=""
      data-ouia-component-id="OUIA-Generated-Text-22"
      data-ouia-component-type="PF4/Text"
      data-ouia-safe={true}
      data-pf-content={true}
    >
      Backup information for this workspace. Backups are created automatically by the DevWorkspace Operator based on the cluster configuration.
    </small>
  </div>
  <div
    aria-atomic="true"
    aria-live="polite"
  >
    <article
      className="pf-c-card pf-m-flat"
      data-ouia-component-id="OUIA-Generated-Card-14"
      data-ouia-component-type="PF4/Card"
      data-ouia-safe={true}
      id=""
    >
      <div
        className="pf-c-card__body"
      >
        <dl
          className="pf-c-description-list pf-m-horizontal"
        >
          <div
            className="pf-c-description-list__group"
          >
            <dt
              className="pf-c-description-list__term"
            >
              <span
                className="pf-c-description-list__text"
              >
                Status
              </span>
            </dt>
            <dd
              className="pf-c-description-list__description"
            >
              <div
                className="pf-c-description-list__text"
              >
                <span
                  data-testid="backup-status-badge"
                >
                  in-progress
                </span>
              </div>
            </dd>
          </div>
          <div
            className="pf-c-description-list__group"
          >
            <dt
              className="pf-c-description-list__term"
            >
              <span
                className="pf-c-description-list__text"
              >
                Last Backup
              </span>
            </dt>
            <dd
              className="pf-c-description-list__description"
            >
              <div
                className="pf-c-description-list__text"
              >
                2 hours ago (Jan 15, 2:30 p.m.)
              </div>
            </dd>
          </div>
          <div
            className="pf-c-description-list__group"
          >
            <dt
              className="pf-c-description-list__term"
            >
              <span
                className="pf-c-description-list__text"
              >
                Next Scheduled Backup
              </span>
            </dt>
            <dd
              className="pf-c-description-list__description"
            >
              <div
                className="pf-c-description-list__text"
              >
                Not scheduled
              </div>
            </dd>
          </div>
        </dl>
      </div>
    </article>
  </div>
</section>
`;

exports[`BackupTab with backup info - never backed up snapshot - never status 1`] = `
<section
  className="pf-c-page__main-section pf-m-light"
>
  <div
    className="pf-c-content header"
  >
    <small
      className=""
      data-ouia-component-id="OUIA-Generated-Text-18"
      data-ouia-component-type="PF4/Text"
      data-ouia-safe={true}
      data-pf-content={true}
    >
      Backup information for this workspace. Backups are created automatically by the DevWorkspace Operator based on the cluster configuration.
    </small>
  </div>
  <div
    aria-atomic="true"
    aria-live="polite"
  >
    <article
      className="pf-c-card pf-m-flat"
      data-ouia-component-id="OUIA-Generated-Card-10"
      data-ouia-component-type="PF4/Card"
      data-ouia-safe={true}
      id=""
    >
      <div
        className="pf-c-card__body"
      >
        <dl
          className="pf-c-description-list pf-m-horizontal"
        >
          <div
            className="pf-c-description-list__group"
          >
            <dt
              className="pf-c-description-list__term"
            >
              <span
                className="pf-c-description-list__text"
              >
                Status
              </span>
            </dt>
            <dd
              className="pf-c-description-list__description"
            >
              <div
                className="pf-c-description-list__text"
              >
                <span
                  data-testid="backup-status-badge"
                >
                  never
                </span>
              </div>
            </dd>
          </div>
          <div
            className="pf-c-description-list__group"
          >
            <dt
              className="pf-c-description-list__term"
            >
              <span
                className="pf-c-description-list__text"
              >
                Last Backup
              </span>
            </dt>
            <dd
              className="pf-c-description-list__description"
            >
              <div
                className="pf-c-description-list__text"
              >
                Never
              </div>
            </dd>
          </div>
          <div
            className="pf-c-description-list__group"
          >
            <dt
              className="pf-c-description-list__term"
            >
              <span
                className="pf-c-description-list__text"
              >
                Next Scheduled Backup
              </span>
            </dt>
            <dd
              className="pf-c-description-list__description"
            >
              <div
                className="pf-c-description-list__text"
              >
                Not scheduled
              </div>
            </dd>
          </div>
        </dl>
      </div>
    </article>
  </div>
</section>
`;

exports[`BackupTab with backup info - success snapshot - success with all fields 1`] = `
<section
  className="pf-c-page__main-section pf-m-light"
>
  <div
    className="pf-c-content header"
  >
    <small
      className=""
      data-ouia-component-id="OUIA-Generated-Text-13"
      data-ouia-component-type="PF4/Text"
      data-ouia-safe={true}
      data-pf-content={true}
    >
      Backup information for this workspace. Backups are created automatically by the DevWorkspace Operator based on the cluster configuration.
    </small>
  </div>
  <div
    aria-atomic="true"
    aria-live="polite"
  >
    <article
      className="pf-c-card pf-m-flat"
      data-ouia-component-id="OUIA-Generated-Card-5"
      data-ouia-component-type="PF4/Card"
      data-ouia-safe={true}
      id=""
    >
      <div
        className="pf-c-card__body"
      >
        <dl
          className="pf-c-description-list pf-m-horizontal"
        >
          <div
            className="pf-c-description-list__group"
          >
            <dt
              className="pf-c-description-list__term"
            >
              <span
                className="pf-c-description-list__text"
              >
                Status
              </span>
            </dt>
            <dd
              className="pf-c-description-list__description"
            >
              <div
                className="pf-c-description-list__text"
              >
                <span
                  data-testid="backup-status-badge"
                >
                  success
                </span>
              </div>
            </dd>
          </div>
          <div
            className="pf-c-description-list__group"
          >
            <dt
              className="pf-c-description-list__term"
            >
              <span
                className="pf-c-description-list__text"
              >
                Last Backup
              </span>
            </dt>
            <dd
              className="pf-c-description-list__description"
            >
              <div
                className="pf-c-description-list__text"
              >
                2 hours ago (Jan 15, 2:30 p.m.)
              </div>
            </dd>
          </div>
          <div
            className="pf-c-description-list__group"
          >
            <dt
              className="pf-c-description-list__term"
            >
              <span
                className="pf-c-description-list__text"
              >
                Backup Image
              </span>
            </dt>
            <dd
              className="pf-c-description-list__description"
            >
              <div
                className="pf-c-description-list__text"
              >
                <div
                  data-testid="clipboard-copy"
                >
                  registry.example.com/backups/my-workspace:latest
                </div>
              </div>
            </dd>
          </div>
          <div
            className="pf-c-description-list__group"
          >
            <dt
              className="pf-c-description-list__term"
            >
              <span
                className="pf-c-description-list__text"
              >
                Next Scheduled Backup
              </span>
            </dt>
            <dd
              className="pf-c-description-list__description"
            >
              <div
                className="pf-c-description-list__text"
              >
                2 hours ago (Jan 15, 2:30 p.m.)
              </div>
            </dd>
          </div>
        </dl>
      </div>
    </article>
  </div>
</section>
`;
